<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    >


<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <ImageView
                    android:id="@+id/imgCompany"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/screen_title"
                    android:scaleType="fitXY"
                    android:src="@drawable/car_tacoma"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_sub"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/space_24"
                    android:layout_marginStart="@dimen/space_16"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintBottom_toBottomOf="@+id/imgCompany"
                    app:layout_constraintEnd_toEndOf="@+id/imgCompany"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imgCompany"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginStart="@dimen/space_16"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/txtSubTitle"
                    app:layout_constraintEnd_toEndOf="@+id/imgCompany"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imgCompany" />


                <LinearLayout
                    android:id="@+id/pnlFilter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/pnl_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgCompany"
                    android:layout_margin="@dimen/space_16"
                    android:padding="@dimen/space_8">

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_filters"
                        android:layout_marginStart="@dimen/space_8" />

                    <EditText
                        android:id="@+id/txtFilterMake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/car_any_make"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        style="@style/EditTextStyle"
                         />

                    <EditText
                        android:id="@+id/txtFilterModel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/car_any_model"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        style="@style/EditTextStyle" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/space_16"
                    app:layout_constraintTop_toBottomOf="@+id/pnlFilter"
                    tools:listitem="@layout/list_item"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
