<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="carInfo"
            type="com.leoilagan.guidomia.data.local.CarInfo" />
        <variable
            name="itemClickListener"
            type="com.leoilagan.guidomia.ui.home.adapter.CustomItemClickedListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
       >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="@dimen/space_16">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:contentDescription="@string/car_photo"
                android:scaleType="fitCenter"
                android:imageUrl="@{carInfo.uuid}"
                android:layout_marginEnd="@dimen/space_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_placeholder" />

            <TextView
                android:id="@+id/txtCarModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:text="@{carInfo.make + ` ` + carInfo.model}"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblCarPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtCarModel"
                app:layout_constraintTop_toBottomOf="@+id/txtCarModel" />

            <TextView
                android:id="@+id/txtCarPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:formatPrice="@{carInfo.marketPrice}"
                android:layout_marginStart="@dimen/space_8"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblCarPrice"
                app:layout_constraintTop_toBottomOf="@+id/txtCarModel" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primaryColor"
                android:rating="@{carInfo.rating}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                style="@style/RatingBar"
                app:layout_constraintStart_toStartOf="@+id/txtCarModel"
                app:layout_constraintTop_toBottomOf="@+id/lblCarPrice"
                android:clickable="false"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/pnlExtension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_16"
            android:paddingEnd="@dimen/space_16"
            android:paddingBottom="@dimen/space_16"
            android:background="@color/light_gray"
            android:visibility="gone">

            <TextView
                android:id="@+id/lblPros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_pros"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="@dimen/space_8"
                android:layout_marginStart="@dimen/space_24"/>

            <LinearLayout

                android:id="@+id/lstPros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_8"
                android:layout_marginStart="@dimen/space_24"
                android:listContent="@{carInfo.prosList}"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/lblCons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_cons"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space_8"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginStart="@dimen/space_24"/>
            <LinearLayout

                android:id="@+id/lstCons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_8"
                android:layout_marginStart="@dimen/space_24"
                android:listContent="@{carInfo.consList}"
                android:orientation="vertical"/>
        </LinearLayout>

        <TextView
            android:id="@+id/linebar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:gravity="center"
            android:background="@color/orange"/>
    </LinearLayout>
</layout>
